--- a/rankings.html
+++ b/rankings.html
@@ -325,7 +325,7 @@ export class StockToolbar extends LitElement {
                     ${item.symbol}
                 </button>`
             )}
-            <div id="myDropdown" class="dropdown-content display-6 ${this.show ? "focus" : ""}" style="max-width:1024px;margin-top:35pt;border-radius:1%;z-index:10;display:${this.show ? "block" : "none"};">
+            <div id="myDropdown" class="dropdown-content display-6 style="max-width:1024px;margin-top:35pt;border-radius:1%;z-index:10;display:${this.show ? "block" : "none"};">
               <input type="text" id="dropdownsearch" class="mb-2" placeholder="Search..." @input="${this.filterFunction}">
               <ul style="padding-left:0">
                 ${this.items.map(
@@ -337,6 +337,7 @@ export class StockToolbar extends LitElement {
                         </a>
                       </li>`
                 )}
+                ${this.items.length == 0 ? html`<li class="dropdown-item">No trades matching your query</li>` : null}
               </ul>
             </div>
             <button 
