--- a/rankings.html
+++ b/rankings.html
@@ -327,7 +327,7 @@ export class StockToolbar extends LitElement {
             )}
             <div id="myDropdown" class="dropdown-content display-6" style="max-width:1024px;margin-top:35pt;border-radius:1%;z-index:10;display:${this.show ? "block" : "none"};">
               <input type="text" id="dropdownsearch" class="mb-2" placeholder="Search..." @input="${this.filterFunction}">
-              <ul style="padding-left:0">
+              <ul style="padding-left:0;margin-bottom:4px">
                 ${this.items.map(
                   (item) => 
                     html`
@@ -337,7 +337,7 @@ export class StockToolbar extends LitElement {
                         </a>
                       </li>`
                 )}
-                ${this.items.length == 0 ? html`<li class="dropdown-item">No trades matching your query</li>` : null}
+                ${this.items.length == 0 ? html`<li class="dropdown-item" style="font-size:small;padding:10px;">No trades matching your query</li>` : null}
               </ul>
             </div>
             <button 
