--- a/rankings.html
+++ b/rankings.html
@@ -104,6 +104,8 @@ export class UserSummary extends LitElement {
     .showchart:hover, .showchart:focus {
         filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(246deg) brightness(104%) contrast(97%);
     }
+    .btn { --bs-btn-color: #fff; --bs-btn-bg: #282739; --bs-btn-border-color: #6c757d; --bs-btn-hover-bg: #ed2c8a; --bs-btn-hover-border-color: #6c757d; } 
+    .btn.active { background-color: #6842cf; border-color: #6c757d; }
   `;
   
   static isProtected = html`<img src="https://tradeaudit.app/assets/OOjs_UI_icon_lock.svg" width="18" height="18" style="margin-bottom: 4pt" alt="Protected">`;
@@ -151,7 +153,7 @@ export class UserSummary extends LitElement {
                         ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}<br/>
                         ${item.stocks.map(
                             (stock) => {
-                                const selected = this.selectedStockItem != null && this.selectedStockItem.symbol == stock.symbol ? "btn-secondary" : "btn-outline-secondary";
+                                const selected = this.selectedStockItem != null && this.selectedStockItem.symbol == stock.symbol ? "active" : "btn-outline-secondary";
                                 return html`<button 
                                   type="button" style="padding:0 10px 0 10px;margin-left:4px;" 
                                   @click=${() => this.selectStockEvent(stock) }
