--- a/rankings.html
+++ b/rankings.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 permalink: /rankings
-title: "Trade Audit User Rankings for Fintwit"
+title: "Trade Audit Influencer Rankings"
 sitemap: true
 author_profile: false
 ---
 
-<h1 class="display-6 fw-bold text-center">Fintwit User Rankings</h1>
+<h1 class="display-6 fw-bold text-center">Social Media Influencer Rankings</h1>
 
 <span class="lead mb-4 text-center">
-  Add new Fintwit trade ideas with realtime performance metrics in the App.
+  Add and track your favorite influencer's trade ideas using the App for Android.
 </span>
 
 <script type="module">
@@ -134,15 +134,15 @@ export class UserSummary extends LitElement {
             ${(this.usersummaries ?? []).map(
               (item) => {
                 const subItem = this.selectedStockItem != null ? item.stocks.find(o => o.symbol == this.selectedStockItem.symbol) : item;
-                const ratedPercent = subItem === undefined ? 0 : Math.round(subItem.pp + subItem.np);
-                const positivePercent = ratedPercent == 0 ? 0 : subItem.pp / ratedPercent;
-                const negativePercent = ratedPercent == 0 ? 0 : subItem.np / ratedPercent;
+                const ratedPercent = subItem === undefined ? 0 : Math.round(subItem.positivePercent + subItem.negativePercent);
+                const positivePercent = ratedPercent == 0 ? 0 : subItem.positivePercent / ratedPercent;
+                const negativePercent = ratedPercent == 0 ? 0 : subItem.negativePercent / ratedPercent;
                 const tradeCount = subItem === undefined ? 0 : subItem.count;
                 
                 const a = html`<a style="all:unset;cursor: pointer;display:flex;" href="https://twitter.com/${item.twitterDisplayName}" target="_blank" title="Open @${item.twitterDisplayName} on Twitter">`;
                 return html`
                 <li class="list-group-item" style="display:flex;align-items:center;">
-                  ${a}<img src="${item.twitterProfileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/></a>
+                  ${a}<img src="${item.profileUrl}" style="width:${height}px;height:${height}px;border-radius:50%;"/></a>
                   <div style="flex-grow:1;padding-left:12px;">
                     <div style="display:flex;">
                       <div style="text-align:left">
@@ -174,7 +174,7 @@ export class UserSummary extends LitElement {
                     </div>
                   </div>
                   ${
-                    (this.selectedStockItem != null && false) ? html`<a href="https://tradeaudit.app/user?twitter=${item.twitterUserName}&symbol=${this.selectedStockItem.symbol}">
+                    (this.selectedStockItem != null && false) ? html`<a href="https://tradeaudit.app/influencer?twitter=${item.twitterUserName}&symbol=${this.selectedStockItem.symbol}">
                         <img src="https://tradeaudit.app/assets/finance.svg" class="showchart" width="60" height="60" alt="Open user conversation chart">
                     </a>` : html`<div style="width:60px"></div>`
                   }
