--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 ---
 layout: default
 permalink: /
-title: "Trade Audit App for Fintwit"
+title: "Trade Audit App for Social Media"
 sitemap: true
 author_profile: false
 ---
 
-<h1 class="display-5 fw-bold text-center">Stock Tracking for Financial Twitter</h1>
+<h1 class="display-5 fw-bold text-center">Stock Advice Tracking for Social Media</h1>
+<h2>Audit the trading records of the influencers found in your social media</h2>
 
 <span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
-  Social media <a href="https://twitter.com/hashtag/fintwit?src=hashtag_click" target="_blank" class="fw-bold">#fintwit</a> is 
-  full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>.
-  They curate twitter feeds to promote successful trading but hide losses by deleting tweets and posting misinformation.
-  Do your due diligence and audit trading records before you invest your time and money.
+  <p>
+  Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>
+  talk their book and make claims about what stocks to buy and where the economy is going.
+  </p>
+  <p>
+  Are they accurate? Do they own up to their mistakes?  Find out before you invest your time and money!
+  </p>
 </span>
 
 <script type="module">
