--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@ author_profile: false
 ---
 
 <h1 class="display-5 fw-bold text-center">Stock Advice Tracking for Social Media</h1>
-<h2>Audit the trading records of the influencers found in your social media</h2>
+<h2>Audit the trading records of influencersfound on social media</h2>
 
 <span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
   <p>
-  Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>
-  talk their book and make claims about what stocks to buy and where the economy is going.
+  Social media is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>
+  making claims about what stocks to buy and where the economy is going.
   </p>
-  <p>
-  Are they accurate? Do they own up to their mistakes?  Find out before you invest your time and money!
-  </p>
+  <p>Are they accurate?</p>
+  <p>Do they admit when they are wrong?</p>
+  <p>Is their knowledge for real?</p>
+  <p><span class="fw-bold">Find out before you invest your time and money!</span></p>
 </span>
 
 <script type="module">
