--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@ author_profile: false
 ---
 
 <h1 class="display-5 fw-bold text-center">Stock Advice Tracking for Social Media</h1>
-<h2>Audit the trading records of influencersfound on social media</h2>
+<h2 class="text-center">Audit the trading records of influencers found on social media</h2>
 
-<span class="lead mb-4" style="text-align:justify;text-justify:inter-word;">
+<span style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
-  Social media is full of <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span>
-  making claims about what stocks to buy and where the economy is going.
+    Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span><br>
+    make claims about what stocks to buy and where the economy is going.
   </p>
-  <p>Are they accurate?</p>
-  <p>Do they admit when they are wrong?</p>
-  <p>Is their knowledge for real?</p>
-  <p><span class="fw-bold">Find out before you invest your time and money!</span></p>
+  <p class="mt-4">
+    ❌ Are they accurate?
+  </p>
+  <p class="mt-2">
+    ❌ Do they admit when they are wrong?
+  </p>
+  <p class="mt-2">
+    ❌ Is their knowledge for real?
+  </p>
+  <p class="mt-5 mb-2 fw-bold">
+    ✅ Find out before you invest your time and money.
+  </p>
 </span>
 
 <div class="d-grid gap-2 col-10 mx-auto mb-5 mt-3">
