--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ author_profile: false
 ---
 
 <h1 class="display-5 fw-bold text-center">Stock Advice Tracking for Social Media</h1>
-<h2 class="text-center">Audit the trading records of influencers found on social media</h2>
+<h2 class="text-center">Audit the trading records of influencers on social media</h2>
 
 <span style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
