--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ author_profile: false
 
 <span style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
-    Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span><br>
-    make claims about what stocks to buy and where the economy is going.
+    Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> claim<br>
+    to know what stocks to buy and where the economy is going.
   </p>
   <p class="mt-4">
     ❌ Are they accurate?
