--- a/index.html
+++ b/index.html
@@ -14,23 +14,21 @@ author_profile: false
     Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> claim<br>
     to know what stocks to buy and where the economy is going.
   </p>
-  <p class="mt-4">
+  <p class="mt-4 fw-bold" style="font-style: italic;">
     ❌ Are they accurate?
   </p>
-  <p class="mt-2">
+  <p class="mt-2 fw-bold" style="font-style: italic;">
     ❌ Do they admit when they are wrong?
   </p>
-  <p class="mt-2">
+  <p class="mt-2 fw-bold" style="font-style: italic;">
     ❌ Is their knowledge for real?
   </p>
-  <p class="mt-5 mb-2 fw-bold">
+  <h3 class="mt-5 mb-2 fw-bold">
     ✅ Find out before you invest your time and money.
-  </p>
+  </h3>
 </span>
 
-<div class="d-grid gap-2 col-10 mx-auto mb-5 mt-3">
-  <a href="/rankings" class="btn btn-primary btn-lg" role="button" style="--bs-btn-font-size:2rem">See the Trade Audit Influencer Rankings</a>
-</div>
+{% include influencerlink.html %}
 
 <script type="module">
 import {LitElement, html, svg, css} from 'https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js';
@@ -329,9 +327,7 @@ customElements.define('twitter-tweet', TwitterTweet);
   
 </div>
 
-<div class="d-grid gap-2 col-10 mx-auto mb-5 mt-3">
-  <a href="/rankings" class="btn btn-primary btn-lg" role="button" style="--bs-btn-font-size:2rem">See the Trade Audit Influencer Rankings</a>
-</div>
+{% include influencerlink.html %}
 
 <div id="masonry">
   <twitter-tweet 
@@ -406,8 +402,6 @@ customElements.define('twitter-tweet', TwitterTweet);
   
 </div>
 
-<div class="d-grid gap-2 col-10 mx-auto mb-5 mt-3">
-  <a href="/rankings" class="btn btn-primary btn-lg" role="button" style="--bs-btn-font-size:2rem">See the Trade Audit Influencer Rankings</a>
-</div>
+{% include influencerlink.html %}
 
 {% include appstorelink.html %}
