--- a/rankings.html
+++ b/rankings.html
@@ -196,7 +196,7 @@ export class InfluencerSummary extends LitElement {
                     </div>
                     <div style="display:flex">
                       <div style="text-align:left">
-                        ${this.profileBody(item.meta)}
+                        ${this.profileMeta(item.meta)}
                       </div>
                       <div style="flex-grow:1;line-height:1.3;" class="card-text text-end">
                         ${ratedPercent == 0 ? 'Zero Rated' : (ratedPercent == 100 ? 'All Rated' : (100 - ratedPercent) + '% Unrated')}<br/>
