--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@ sitemap: true
 author_profile: false
 ---
 
-<h1 class="display-5 fw-bold text-center">Stock Advice Tracking for Social Media</h1>
-<h2 class="text-center">Audit the trading records of influencers on social media</h2>
+<h1 class="display-5 fw-bold text-center">Track stock recommendations made on any Social Media</h1>
+<h2 class="text-center">Audit the trading records of Stock Pros and other Influencers</h2>
 
 <span style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
     Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> claim<br>
-    to know what stocks to buy and where the economy is going.
+    to know the stocks to buy that will make you money.
   </p>
   <p class="mt-4 fw-bold" style="font-style: italic;">
     ❌ Are they accurate?
