--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@ sitemap: true
 author_profile: false
 ---
 
-<h1 class="display-5 fw-bold text-center">Track stock recommendations made on any Social Media</h1>
+<h1 class="display-5 fw-bold text-center">Track Stock Recommendations<br/>made on any Social Media Platform</h1>
 <h2 class="text-center">Audit the trading records of Stock Pros and other Influencers</h2>
 
 <span style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
     Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> claim<br>
-    to know the stocks to buy that will make you money.
+    to know what stocks to buy and how investments can make you money. But!
+  </p>
+  <p class="mt-4 fw-bold" style="font-style: italic;">
+    ❌ What is their full track record?
   </p>
   <p class="mt-4 fw-bold" style="font-style: italic;">
     ❌ Are they accurate?
@@ -21,7 +24,7 @@ author_profile: false
     ❌ Do they admit when they are wrong?
   </p>
   <p class="mt-2 fw-bold" style="font-style: italic;">
-    ❌ Is their knowledge for real?
+    ❌ Is their knowledge even for real?
   </p>
   <h3 class="mt-5 mb-2 fw-bold">
     ✅ Find out before you invest your time and money.
