--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@ author_profile: false
     Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> claim<br>
     to know what stocks to buy and how investments can make you money. But!
   </p>
-  <p class="mt-4 fw-bold" style="font-style: italic;">
+  <p class="mt-5 fw-bold" style="font-style: italic;">
     ❌ What is their full track record?
   </p>
-  <p class="mt-4 fw-bold" style="font-style: italic;">
+  <p class="mt-2 fw-bold" style="font-style: italic;">
     ❌ Are they accurate?
   </p>
   <p class="mt-2 fw-bold" style="font-style: italic;">
@@ -26,8 +26,8 @@ author_profile: false
   <p class="mt-2 fw-bold" style="font-style: italic;">
     ❌ Is their knowledge even for real?
   </p>
-  <h3 class="mt-5 mb-2 fw-bold">
-    ✅ Find out before you invest your time and money.
+  <h3 class="mt-5 mb-5 fw-bold">
+    ✅ Find out before you invest.
   </h3>
 </span>
 
