--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@ sitemap: true
 author_profile: false
 ---
 
-<h1 class="display-5 fw-bold text-center">Track Stock Recommendations<br/>made on any Social Media Platform</h1>
-<h2 class="text-center">Audit the trading records of Stock Pros and other Influencers</h2>
+{% include header.html %}
 
-<span style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
+<div style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
     Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> claim<br>
     to know what stocks to buy and how investments can make you money. But!
@@ -29,7 +28,7 @@ author_profile: false
   <h3 class="mt-5 mb-5 fw-bold">
     ✅ Find out before you invest.
   </h3>
-</span>
+</div>
 
 {% include influencerlink.html %}
 
