--- a/x-import.html
+++ b/x-import.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /x
+permalink: /x-import
 title: "Trade Audit App for Social Media"
 sitemap: true
 author_profile: false
