--- a/import/youtube-import.html
+++ b/import/youtube-import.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /url-import
+permalink: /youtube-import
 title: "Trade Audit App for Social Media"
 sitemap: true
 author_profile: false
