--- a/rankings.html
+++ b/rankings.html
@@ -128,7 +128,7 @@ export class InfluencerSummary extends LitElement {
   profileTypeImage(influencer){
     if (influencer.meta.type == "twitter" || influencer.meta.type == "x") return html`<img src="/assets/influencer-x.svg" style="width:30px;margin-left:4px">`;
     if (influencer.meta.type == "youtube") return html`<img src="/assets/influencer-youtube.svg">`;
-    if (influencer.meta.type == "web") return html`<img src="/assets/influencer-web.svg">`;
+    if (influencer.meta.type == "web" || influencer.meta.type == "url") return html`<img src="/assets/influencer-url.svg">`;
     return html``;
   }
 
