--- a/import/urls.html
+++ b/import/urls.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-permalink: /url-import
-title: "Trade Audit App for Social Media"
+permalink: /urls
+title: "Trade Audit for URLs"
 sitemap: true
 author_profile: false
 ---
