--- a/import/youtube.html
+++ b/import/youtube.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-permalink: /youtube-import
-title: "Trade Audit App for Social Media"
+permalink: /youtube
+title: "Trade Audit for Youtube"
 sitemap: true
 author_profile: false
 ---
