--- a/import/x.html
+++ b/import/x.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-permalink: /x-import
-title: "Trade Audit App for Social Media"
+permalink: /x
+title: "Trade Audit for X"
 sitemap: true
 author_profile: false
 ---
@@ -11,6 +11,35 @@ author_profile: false
 {% include integrations.html selected="x" %}
 
 {% include influencerlink.html %}
+
+<div class="mt-5 mb-5 text-center">
+  <h2 class="display-5 fw-bold mb-4">X (formally Twtter) Integrations</h2>
+
+  <p>
+    The <span style="text-decoration:italic">FinTwit</span> community on X is notorious for a lack of accountability.
+  </p>
+  <p>
+    The most common strategies to obscure stock picks are:
+  </p>
+  <h3>Deleting Bad Picks</h3>
+  <p>
+    By far the easiest way to keep a pristine track record is to delete bad tweets.  There are few ways to recover deleted tweets
+     so there is little risk of getting caught.  Many X accounts automatically delete tweets over a few weeks old out of
+    precaution and because they have no intention of being held to account.
+  </p>
+  <h3>Playing Both Sides</h3>
+  <p>
+    A common strategy often combined with <span>deleting bad picks</span>; is to play both sides of a trade. Pairs of posts are
+    tweeted, separating the pro's and con's into separate tweets; capitalizing under the cover of X's character limit.
+    Once a outcome is known, the wrong side of the trade's tweet is deleted, only leaving a fully correct prediction.
+  </p>
+  <h3>Spam Bots</h3>
+  <p>
+    These play off of <a href="https://en.wikipedia.org/wiki/Survivorship_bias" target="_blank">survivorship bias</a>. Bot accounts
+     with fake followers will make generic market calls in every sort of permutation.<br>
+    It takes <span style="font-weight:bold">2<sup>N</sup></span> accounts to make <span style="font-weight:bold">N perfect market calls</span>.
+  </p>
+</div>
 
 <script type="module">
 import {LitElement, html, svg, css} from 'https://cdn.jsdelivr.net/gh/lit/dist@2/core/lit-core.min.js';
