--- a/import/x.html
+++ b/import/x.html
@@ -12,12 +12,15 @@ author_profile: false
 
 {% include influencerlink.html %}
 
-<div class="mt-5 mb-5 text-center">
-  <h2 class="display-5 fw-bold mb-4">X (formally Twtter) Integrations</h2>
+<h1 class="display-5 fw-bold mb-4 mt-5 text-center">X (formally Twitter)</h1>
 
-  <p>
-    The <span style="text-decoration:italic">FinTwit</span> community on X is notorious for a lack of accountability.
-  </p>
+<div class="text-center">
+  The <span style="text-decoration:italic">FinTwit</span> community on X is notorious for a lack of accountability.
+</div>
+
+<h2 class="display-5 fw-bold mb-4 mt-5 text-center">Common Tactics</h2>
+
+<div class="mt-5 mb-5 text-center">
   <p>
     The most common strategies to obscure stock picks are:
   </p>
@@ -37,7 +40,8 @@ author_profile: false
   <p>
     These play off of <a href="https://en.wikipedia.org/wiki/Survivorship_bias" target="_blank">survivorship bias</a>. Bot accounts
      with fake followers will make generic market calls in every sort of permutation.<br>
-    It takes <span style="font-weight:bold">2<sup>N</sup></span> accounts to make <span style="font-weight:bold">N perfect market calls</span>.
+    It takes <span style="font-weight:bold">2<sup>N</sup></span> accounts to make <span style="font-weight:bold">N perfect market calls</span>,
+    and X has 1.5 Million new accounts created every day.
   </p>
 </div>
 
